--- a/Test.Paging.Physical/Test.Paging.PhysicalLevel.csproj
+++ b/Test.Paging.Physical/Test.Paging.PhysicalLevel.csproj
@@ -18,6 +18,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="coverlet.msbuild" Version="2.5.1">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
     <PackageReference Include="FakeItEasy" Version="4.7.1" />
     <PackageReference Include="FakeItEasy.Analyzer.CSharp" Version="4.7.1" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.8.0" />
