--- a/System.IO.Paging.PhysicalLevel/System.IO.Paging.PhysicalLevel.csproj
+++ b/System.IO.Paging.PhysicalLevel/System.IO.Paging.PhysicalLevel.csproj
@@ -37,14 +37,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Addiction.System.Threading.HybridLocks" Version="1.0.0" />
     <PackageReference Include="System.ComponentModel" Version="4.3.0" />
     <PackageReference Include="System.ComponentModel.Composition" Version="4.5.0" />
     <PackageReference Include="System.Diagnostics.DiagnosticSource" Version="4.5.1" />
     <PackageReference Include="System.IO.MemoryMappedFiles" Version="4.3.0" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\System.Threading.HybridLocks\System.Threading.HybridLocks.csproj" />
   </ItemGroup>
 
 </Project>
