--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,7 +18,7 @@ test_physical_release:
   script: 
      - dotnet tool install --global coverlet.console
      - dotnet tool install coveralls.net --tool-path ./tools
-     - dotnet test Test.Paging.Physical -c Release /p:Include="[*System.IO.Paging.PhysicalLevel]*" /p:CollectCoverage=true /p:CoverletOutputFormat=opencover /p:CoverletOutput=coverage.xml               
+     - coverlet Test.Paging.Physical/bin/release/netcoreapp2.0/ -t dotnet -a "test Test.Paging.Physical -c Release" --format opencover --output coverage.xml --include [*Paging.PhysicalLevel*]*
      - tools/csmacnz.Coveralls --opencover -i Test.Paging.Physical/coverage.xml --repoToken $COVER_TOKEN --commitId $CI_COMMIT_SHA --commitBranch $CI_COMMIT_REF_NAME --commitMessage $CI_COMMIT_TITLE --jobId $CI_JOB_ID     
 
 test_logical_debug: 
@@ -31,7 +31,7 @@ test_logical_release:
   script: 
      - dotnet tool install --global coverlet.console
      - dotnet tool install coveralls.net --tool-path ./tools
-     - dotnet test Test.Paging.LogicalLevel -c Release /p:Include="[*System.IO.Paging.LogicalLevel]*" /p:CollectCoverage=true /p:CoverletOutputFormat=opencover /p:CoverletOutput=coverage.xml               
+     - coverlet Test.Paging.LogicalLevel/bin/release/netcoreapp2.0 -t dotnet -a "test Test.Paging.LogicalLevel -c Release" --format opencover --output coverage.xml --include [*Paging.LogicalLevel*]*
      - tools/csmacnz.Coveralls --opencover -i Test.Paging.LogicalLevel/coverage.xml --repoToken $COVER_TOKEN --commitId $CI_COMMIT_SHA --commitBranch $CI_COMMIT_REF_NAME --commitMessage $CI_COMMIT_TITLE --jobId $CI_JOB_ID        
 
 test_integration_physical_debug: 
