--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,9 +20,8 @@ test_physical_release:
      - dotnet tool install --global coverlet.console     
      - dotnet tool install coveralls.net --tool-path ./tools
      - dotnet build Test.Paging.Physical -c Release
-     - coverlet Test.Paging.Physical/bin/Release/netcoreapp2.0/ -t dotnet -a "test Test.Paging.Physical -c Release --no-build" --format opencover --output "coverage.xml" --exclude "[Test*]*"
-     - echo "tools/csmacnz.Coveralls --opencover -i coverage.xml --repoToken $COVER_TOKEN --commitId $CI_COMMIT_SHA --commitBranch $CI_COMMIT_REF_NAME --commitMessage $CI_COMMIT_TITLE --jobId $CI_JOB_ID"
-     - tools/csmacnz.Coveralls --opencover -i coverage.xml --repoToken $COVER_TOKEN --commitId "$CI_COMMIT_SHA" --commitBranch "$CI_COMMIT_REF_NAME" --commitMessage "$CI_COMMIT_TITLE" --jobId "$CI_JOB_ID"
+     - coverlet Test.Paging.Physical/bin/Release/netcoreapp2.0/ -t dotnet -a "test Test.Paging.Physical -c Release --no-build" --format opencover --output "coverage.xml" --exclude "[Test*]*"     
+     - tools/csmacnz.Coveralls --opencover -i coverage.xml --repoToken $COVER_TOKEN --commitId "$CI_COMMIT_SHA" --commitBranch "$CI_COMMIT_REF_NAME" --commitMessage "$CI_COMMIT_TITLE" --jobId "$CI_JOB_ID" --commitAuthor "kayanme" --commitEmail "kayan@kayan.me" 
 
 test_logical_debug: 
   stage: unit_test  
@@ -37,7 +36,7 @@ test_logical_release:
      - dotnet build Test.Paging.LogicalLevel -c Release
      - dotnet tool install coveralls.net --tool-path ./tools
      - coverlet Test.Paging.LogicalLevel/bin/Release/netcoreapp2.0 -t dotnet -a "test Test.Paging.LogicalLevel  -c Release --no-build" --format opencover --output "coverage.xml"  --exclude "[Test*]*"
-     - tools/csmacnz.Coveralls --opencover -i coverage.xml --repoToken $COVER_TOKEN --commitId "$CI_COMMIT_SHA" --commitBranch "$CI_COMMIT_REF_NAME" --commitMessage "$CI_COMMIT_TITLE" --jobId "$CI_JOB_ID"        
+     - tools/csmacnz.Coveralls --opencover -i coverage.xml --repoToken $COVER_TOKEN --commitId "$CI_COMMIT_SHA" --commitBranch "$CI_COMMIT_REF_NAME" --commitMessage "$CI_COMMIT_TITLE" --jobId "$CI_JOB_ID" --commitAuthor "kayanme" --commitEmail "kayan@kayan.me"        
 
 test_integration_physical_debug: 
   stage: integration_test  
