--- a/Test.Paging.LogicalLevel/Test.Paging.LogicalLevel.csproj
+++ b/Test.Paging.LogicalLevel/Test.Paging.LogicalLevel.csproj
@@ -8,6 +8,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="coverlet.msbuild" Version="2.5.1">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="FakeItEasy" Version="4.8.0" />
     <PackageReference Include="FakeItEasy.Analyzer.CSharp" Version="4.8.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.8.0" />
