--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -24,6 +24,7 @@ test_physical_release:
      - dotnet tool install coveralls.net --tool-path ./tools
      - dotnet build Test.Paging.Physical -c Release
      - coverlet Test.Paging.Physical/bin/Release/netcoreapp2.0/ -t dotnet -a "test Test.Paging.Physical -c Release --no-build" --format opencover --output "coverage.xml" --exclude "[Test*]*"     
+     - unset GITLAB_CI
      - tools/csmacnz.Coveralls --opencover -i coverage.xml --repoTokenVariable COVER_TOKEN
 
 test_logical_debug: 
@@ -39,6 +40,7 @@ test_logical_release:
      - dotnet build Test.Paging.LogicalLevel -c Release
      - dotnet tool install coveralls.net --tool-path ./tools
      - coverlet Test.Paging.LogicalLevel/bin/Release/netcoreapp2.0 -t dotnet -a "test Test.Paging.LogicalLevel  -c Release --no-build" --format opencover --output "coverage.xml"  --exclude "[Test*]*"
+     - unset GITLAB_CI
      - tools/csmacnz.Coveralls --opencover -i coverage.xml  --repoTokenVariable COVER_TOKEN 
 
 test_integration_physical_debug: 
