--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -25,7 +25,7 @@ test_physical_release:
      - dotnet build Test.Paging.Physical -c Release
      - coverlet Test.Paging.Physical/bin/Release/netcoreapp2.0/ -t dotnet -a "test Test.Paging.Physical -c Release --no-build" --format opencover --output "coverage.xml" --exclude "[Test*]*"     
      - unset GITLAB_CI
-     - tools/csmacnz.Coveralls --opencover -i coverage.xml --repoTokenVariable COVER_TOKEN --commitId $CI_COMMIT_SHA --commitBranch $CI_COMMIT_REF_NAME --commitMessage "$CI_COMMIT_MESSAGE" --jobId $CI_JOB_ID
+     - tools/csmacnz.Coveralls --opencover -i coverage.xml --repoTokenVariable COVER_TOKEN --commitId $CI_COMMIT_SHA --commitBranch $CI_COMMIT_REF_NAME --commitMessage "$CI_COMMIT_MESSAGE" --jobId $CI_JOB_ID --serviceName gitlab --useRelativePaths --basePath /build/kayanme/System.IO.Paging
 
 test_logical_debug: 
   stage: unit_test  
@@ -41,7 +41,7 @@ test_logical_release:
      - dotnet tool install coveralls.net --tool-path ./tools 
      - coverlet Test.Paging.LogicalLevel/bin/Release/netcoreapp2.0 -t dotnet -a "test Test.Paging.LogicalLevel  -c Release --no-build" --format opencover --output "coverage.xml"  --exclude "[Test*]*"
      - unset GITLAB_CI
-     - tools/csmacnz.Coveralls --opencover -i coverage.xml  --repoTokenVariable COVER_TOKEN  --commitId $CI_COMMIT_SHA --commitBranch $CI_COMMIT_REF_NAME --commitMessage "$CI_COMMIT_MESSAGE" --jobId $CI_JOB_ID
+     - tools/csmacnz.Coveralls --opencover -i coverage.xml  --repoTokenVariable COVER_TOKEN  --commitId $CI_COMMIT_SHA --commitBranch $CI_COMMIT_REF_NAME --commitMessage "$CI_COMMIT_MESSAGE" --jobId $CI_JOB_ID --serviceName gitlab --useRelativePaths --basePath /build/kayanme/System.IO.Paging
 
 test_integration_physical_debug: 
   stage: integration_test  
@@ -61,6 +61,8 @@ test_integration_physical_release:
 
 benchmark_physical:
   stage: benchmark  
+  only:
+     - master
   artifacts:
      paths:
      - Benchmarks
@@ -70,6 +72,8 @@ benchmark_physical:
 
 benchmark_logical:
   stage: benchmark  
+  only:
+     - master
   artifacts:
      paths:
       - Benchmarks
